# webrender

./: Cargo.toml
example-compositor/compositor/: Cargo.toml
sample/src/: main.rs
swgl/: Cargo.toml
webrender/: Cargo.toml  build.rs
webrender/examples/common/: boilerplate.rs
webrender/res/: base.glsl  brush.glsl  cs_line_decoration.glsl  debug_color.glsl  debug_font.glsl  debug_shared.glsl  prim_shared.glsl  ps_split_composite.glsl  shared.glsl
webrender/src/: batch.rs  clip.rs  clip_scroll_tree.rs  debug_render.rs  device.rs  display_list_flattener.rs  frame.rs  frame_builder.rs  gpu_types.rs  hit_test.rs  internal_types.rs  lib.rs  path.rs  picture.rs  prim_store.rs  profiler.rs  render_backend.rs  render_target.rs  renderer.rs  resource_cache.rs  scene_builder.rs  shade.rs  spatial_node.rs  tiling.rs  util.rs
webrender/src/device/: gl.rs
webrender/src/platform/unix/: font.rs
webrender/src/prim_store/: mod.rs
webrender/src/renderer/: mod.rs  vertex.rs
webrender_api/src/: display_item.rs  display_list.rs
webrender_build/src/: shader.rs  shader_features.rs
webrender_traits/src/: api.rs  display_item.rs  display_list.rs  types.rs
wrench/: Cargo.toml  wrench.trace
wrench/reftests/backface/: reftest.list
wrench/reftests/border/: reftest.list
wrench/src/: data.rs  main.rs  rawtest.rs  reftest.rs  yaml_frame_reader.rs  yaml_frame_writer.rs  yaml_helper.rs
