[workspace]
license = "MPL-2.0"
members = [
    #"direct-composition",
    "webrender",
    "webrender_api",
    "wrench",
]

[profile.release]
debug = true
panic = "abort"

#[patch.crates-io]

[replace]
"https://github.com/gfx-rs/gfx.git#gfx-hal:0.1.0" = { git = "https://github.com/gfx-rs/gfx.git", rev="157bff075a421837288c68261c6f009e55023c13"}
"https://github.com/gfx-rs/gfx.git#gfx-backend-vulkan:0.1.0"= { git = "https://github.com/gfx-rs/gfx.git", rev="157bff075a421837288c68261c6f009e55023c13" }
"https://github.com/gfx-rs/gfx.git#gfx-backend-dx12:0.1.0"= { git = "https://github.com/gfx-rs/gfx.git", rev="157bff075a421837288c68261c6f009e55023c13" }
"https://github.com/gfx-rs/gfx.git#gfx-backend-empty:0.1.0"= { git = "https://github.com/gfx-rs/gfx.git", rev="157bff075a421837288c68261c6f009e55023c13" }
