[workspace]
license = "MPL-2.0"
members = [
    #"direct-composition",
    "webrender",
    "webrender_api",
    "wrench",
]

[profile.release]
debug = true
panic = "abort"

[replace]
"https://github.com/rust-lang/crates.io-index#serde_derive:1.0.58" = { git = "https://github.com/servo/serde", branch = "deserialize_from_enums7", feature="deserialize_in_place" }
"https://github.com/gfx-rs/gfx.git#gfx-hal:0.1.0" = { git = "https://github.com/kvark/gfx.git", branch="mtl-tracking-bug" }
"https://github.com/gfx-rs/gfx.git#gfx-backend-vulkan:0.1.0" = { git = "https://github.com/kvark/gfx.git", branch="mtl-tracking-bug" }
"https://github.com/gfx-rs/gfx.git#gfx-backend-dx12:0.1.0" = { git = "https://github.com/kvark/gfx.git", branch="mtl-tracking-bug" }
"https://github.com/gfx-rs/gfx.git#gfx-backend-metal:0.1.0" = { git = "https://github.com/kvark/gfx.git", branch="mtl-tracking-bug" }
"https://github.com/gfx-rs/gfx.git#gfx-backend-empty:0.1.0" = { git = "https://github.com/kvark/gfx.git", branch="mtl-tracking-bug" }
#"https://github.com/gfx-rs/gfx.git#gfx-hal:0.1.0" = { path = "../gfx-wr/src/hal" }
#"https://github.com/gfx-rs/gfx.git#gfx-backend-vulkan:0.1.0" = { path = "../gfx-wr/src/backend/vulkan" }
#"https://github.com/gfx-rs/gfx.git#gfx-backend-dx12:0.1.0" = { path = "../gfx-wr/src/backend/dx12" }
#"https://github.com/gfx-rs/gfx.git#gfx-backend-metal:0.1.0" = { path = "../gfx-wr/src/backend/metal" }
#"https://github.com/gfx-rs/gfx.git#gfx-backend-empty:0.1.0" = { path = "../gfx-wr/src/backend/empty" }
